--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bajo-spatial",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Spatial functions for Bajo Framework",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/ardhi/bajo-spatial#readme",
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "geolib": "^3.3.4"
   }
 }
