--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "bajo-spatial",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Spatial functions for Bajo Framework",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
+  "bajo": {
+    "type": "plugin"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ardhi/bajo-spatial.git"
