--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Spatial functions for Bajo Framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-doc": "jsdoc -c .jsdoc.conf.json",
+    "test": "mocha"
   },
   "type": "module",
   "bajo": {
@@ -30,5 +31,9 @@
     "@turf/turf": "^7.2.0",
     "aneka-spatial": "^0.0.4",
     "geolib": "^3.3.4"
+  },
+  "devDependencies": {
+    "clean-jsdoc-theme": "^4.3.0",
+    "jsdoc-plugin-intersection": "^1.0.4"
   }
 }
