--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "type": "module",
   "bajo": {
-    "type": "plugin"
+    "type": "plugin",
+    "alias": "spatial"
   },
   "repository": {
     "type": "git",
